compiling_error.txt
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\main.cpp: In function 'std::string cargarArchivo(std::list<lugar*>&, std::string)':
C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\main.cpp:131:28: error: too few arguments to function 'char* strcat(char*, const char*)'
   ifstream archivo(strcat(y));
                            ^
In file included from C:/Program Files (x86)/CodeBlocks/MinGW/lib/gcc/mingw32/4.9.2/include/c++/cstring:42:0,
                 from C:\Users\willi\Google Drive\PROYECTO ESTRUCTURAS\1ra ENTREGA\PROYECTO-ESTRUCURAS\main.cpp:3:
C:/Program Files (x86)/CodeBlocks/MinGW/include/string.h:41:39: note: declared here
 _CRTIMP char* __cdecl __MINGW_NOTHROW strcat (char*, const char*);
                                       ^
